[package]
name = "dptw"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.27", features = ["serde"] }
clap = { version = "4.4.1", features = ["derive"] }
ego-tree = "0.10.0"
epub-builder = "0.8.2"
feed-rs = "2.3.1"
html5ever = "0.36.1"
indoc = "2.0.3"
reqwest = { version = "0.13.1", default-features = false, features = ["blocking", "native-tls", "http2", "gzip"] }
scraper = "0.25.0"
serde = { version = "1.0.188", features = ["derive"] }
tera = "1.19.0"
toml = "0.9.11"
